# internal-smithery-mcp

./: Cargo.toml  Dockerfile  README.md  smithery.yaml
crates/internal-smithery-mcp-web-search/: .dockerignore  Cargo.toml  Dockerfile
crates/internal-smithery-mcp-web-search/src/: main.rs
crates/internal-smithery-mcp-web-search/src/tool/: fetch.rs  search.rs
src/: main.rs
src/tool/: fetch.rs  search.rs
