[package]
name = "internal-smithery-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
fast_html2md = "0.0.48"
headless_chrome = "1.0.18"
rmcp = { version = "0.8.3", features = [
    "transport-io",
    "transport-streamable-http-server",
    "transport-worker",
] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
