[package]
name = "internal-smithery-mcp-web-search"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
fast_html2md = "0.0.51"
futures = "0.3.31"
headless_chrome = "1.0.18"
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
    "http2",
    "gzip",
    "brotli",
    "charset",
] }
rmcp = { version = "0.11.0", features = [
    "transport-io",
    "transport-streamable-http-server",
    "transport-worker",
] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_qs = "0.15.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
